--- a/css/index.css
+++ b/css/index.css
@@ -8,8 +8,9 @@ body{
 }
 .left-side{
     float: left;
-    background-color: #F5FAFC;
+    background-color: rgba(232, 233, 233, 0.3);
     width: 15%;
+    height: 800px;
     border-right: 2px solid #E5E9EB;
     margin-top: 1%;
 }
@@ -57,5 +58,20 @@ body{
     font-size: 13px;
 }
 .content-2 a:hover{
+    text-decoration: underline;
+}
+.content-3{
+    margin-top: 10%;
+    margin-left: 12%;
+}
+.content-3 h3{
+    color: #808080;
+    font-size: 13px;
+}
+.content-3 a{
+    display: block;
+    font-size: 13px;
+}
+.content-3 a:hover{
     text-decoration: underline;
 }
